# regler-linux

./: .gitignore  README.md  com.personal.regler.json  meson.build
data/: com.personal.regler.appdata.xml.in  com.personal.regler.desktop.in  com.personal.regler.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: Actions.py  App.py  Firebase.py  config.py  main.py  meson.build  regler.gresource.xml  regler.in  window.py  window.ui
